objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Client_Inception_Date__c</fullName>
        <description>Date of first contract between Promissor and client</description>
        <label>Client Inception Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <description>This amount is the contract value on an annual basis.</description>
        <label>Yearly Contract Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-renewal account</description>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_of_the_Contract_Value__c</fullName>
        <description>This is the full value for the life of the contract.</description>
        <label>Life-of-the-Contract Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Date__c</fullName>
        <description>The complete end date of contract including all options, except for evergreen accounts</description>
        <label>Opportunity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Services__c</fullName>
        <description>Services provided by Promissor other than the standard ones</description>
        <label>Other Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pearson_Contract_Number__c</fullName>
        <label>Pearson Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <description>Please select the services that Pearson will be providing under this contract.</description>
        <label>Services Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back-office Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE Tracking Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credential Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eLearning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fingerprinting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Marking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mindhub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PKT automated marking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web services - RTEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web services - RTI &amp; SSO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllActivatedG2Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Pearson_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Contracted,Pending</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.G2_Contract</value>
        </filters>
        <label>All Contracts (G2)</label>
        <sharedTo>
            <role>Administrator</role>
            <role>G2_International_Prog_Mgmt_BusDev</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllG2ContractedClientsactivated</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Active,Contracted</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notContain</operation>
            <value>Inactive,Terminated,other</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.G2_Contract</value>
        </filters>
        <label>All (G2) Contracted Clients - activated</label>
        <sharedTo>
            <role>Administrator</role>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllG2TerminatedAccounts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Services_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Terminated,Inactive</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.G2_Contract</value>
        </filters>
        <label>All G2 Terminated Accounts</label>
        <sharedTo>
            <role>Administrator</role>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllRegActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A,P,D</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Regulatory_Contract</value>
        </filters>
        <label>All Regulatory Contracts</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BD_Americas_Business_Development</role>
            <role>Regulatory_Americas_BusDev_Prog_Mgmt_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllTerminatedAccounts</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Services_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Terminated</value>
        </filters>
        <label>All Terminated Accounts</label>
    </listViews>
    <listViews>
        <fullName>ContractG2expiredwithinpast2months</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Pearson_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notContain</operation>
            <value>Terminated</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notContain</operation>
            <value>Inactive,Pending</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contract.Regulatory_Contract</value>
        </filters>
        <label>Contracts (G2) expired past 2 months+</label>
        <sharedTo>
            <role>Administrator</role>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContractsG2expiringin3months</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Pearson_Contract_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Active,Contracted</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.G2_Contract</value>
        </filters>
        <label>Contracts (G2) expiring in 3 months</label>
        <sharedTo>
            <role>Administrator</role>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContractsREGexpiringin3months</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Regulatory_Contract</value>
        </filters>
        <label>Contracts (Reg) expiring in 3 months</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BD_Americas_Business_Development</role>
            <role>Global_Proposal_Development</role>
            <role>Regulatory_Americas_BusDev_Prog_Mgmt_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Reg_Contracts_expired_past_2_months</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notContain</operation>
            <value>Terminated,Inactive</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Regulatory_Contract</value>
        </filters>
        <label>Contracts (Reg) expired past 2 months+</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BD_Americas_Business_Development</role>
            <role>Regulatory_Americas_BusDev_Prog_Mgmt_Sales</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>G2_Contract</fullName>
        <active>true</active>
        <label>G2 Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulatory_Contract</fullName>
        <active>true</active>
        <label>Regulatory Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>